# suimon

./: .gitignore  rarity.py  readme.md
SuiMon_Data/: SuiMons.json  Suimon_database.json
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/assets/: suimons.json
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/blocs/: bloc_observer.dart  blocs.dart  discover_notification_bloc.dart  discover_notification_event.dart  discover_notification_state.dart  location_permission_bloc.dart  (+8 more)
app/messages/: groth16_proof.proto  proof_generation.proto
app/native/hub/: Cargo.toml  build.rs
app/native/hub/src/: lib.rs  main.rs
app/native/hub/src/messages/: counter_number.rs  fractal_art.rs  generated.rs  mod.rs  proof_generation.rs
app/native/hub/src/messages/sample_folder/: mod.rs  sample_file.rs
app/native/hub/src/messages/sample_folder/deeper_folder/: deeper_file.rs  mod.rs
app/test/: widget_test.dart
circuits/: circuit.circom  circuit.r1cs  circuit.r1cs.json  circuit.sym  gen.rs  input.json  proof.json  public.json  serialize.py  verification_key.json  verifier.sol  witness.wtns
circuits/circuit_js/: circuit.wasm
circuits/scripts/: serialize.js  serialize_public.js  serialize_vk.js  utils.js
circuits/setup/: response_0003
circuits/zkey/: challenge_phase2_0003  circuit_0000.zkey  circuit_0001.zkey  circuit_0002.zkey  circuit_0003.zkey  circuit_final.zkey  response_phase2_0003
contracts/: Move.toml
contracts/sources/: suimon.move
contracts/tests/: suimon_tests.move
(+48 files in other folders)
