[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.14", features = ["full"] }
rinf = "7.0.2"
ark-groth16 = "0.3.0"
ark-std = "0.3.0"
ark-serialize = "0.3.0"
ark-relations = "0.3.0"
ark-bn254 = "0.3.0"
ark-snark = "0.3.0"
ark-circom = { version = "0.5.0-alpha" }
rand = "0.8"
hex = "0.4.3"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"


# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.7.1", features = ["rt", "macros"] }
# wasm-bindgen = "0.2.93"
